small changes in html

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World!</title>
 </head>
 <body>
-	<h1>Built for coursera test</h1>
+	<h1>Built for coursera test. It's a great course!</h1>
 </body>
 </html>
